<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mateuszziomek.homebudget.Position">


    <Spinner
        android:id="@+id/spinner_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </Spinner>

    <Spinner
        android:id="@+id/spinner_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></Spinner>

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/date"
        android:inputType="date" />

    <EditText
        android:id="@+id/what"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/what"
        android:inputType="text" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spinner_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></Spinner>

    <Button
        style="@style/TextView_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2979FF"
        android:text="@string/add" />

</LinearLayout>
